--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,16 +9,8 @@ trigger:
 pool:
   vmImage: ubuntu-latest
 
-strategy:
-  matrix:
-    Python38:
-      python.version: '3.8'
-    Python39:
-      python.version: '3.9'
-    Python310:
-      python.version: '3.10'
-    Python311:
-      python.version: '3.11'
+variables:
+    python.version: '3.11'
 
 steps:
 - task: UsePythonVersion@0
